--- a/kao.sty
+++ b/kao.sty
@@ -24,7 +24,7 @@
 \RequirePackage{xpatch} % Patch LaTeX code in external packages
 \RequirePackage{xstring} % Parse strings
 \RequirePackage{afterpage} % Run commands after specific pages
-\RequirePackage{imakeidx} % For the index; must be loaded before the 'caption' and 'hyperref' packages
+%\RequirePackage{imakeidx} % For the index; must be loaded before the 'caption' and 'hyperref' packages
 \RequirePackage{varioref} % For the cross-references; must be loaded before the 'hyperref' and 'cleveref' packages
 \AtEndPreamble{\RequirePackage{scrhack}} % Make some packages compatible with KOMAScript
 
@@ -527,7 +527,7 @@
 %----------------------------------------------------------------------------------------
 
 \RequirePackage{graphicx} % Include figures
-\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio} % Improves figure scaling
+%\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio} % Improves figure scaling
 \RequirePackage{tikz} % Allows to draw custom shapes
 \RequirePackage{tikzpagenodes} % Allows to anchor tikz nodes to page elements
 \RequirePackage{booktabs} % Nicer tables
@@ -1312,7 +1312,7 @@
 % Productivity
 \RequirePackage{pdfpages} % Insert PDF pages
 \RequirePackage{subfiles} % Adopt a modular structure
-\RequirePackage{todonotes} % Add useful notes in the margins
+% \RequirePackage{todonotes} % Add useful notes in the margins
 
 % Listings code
 \RequirePackage{listings} % Code
@@ -1381,14 +1381,14 @@
 %verbatim \preto{\@verbatim}{\topsep=0pt \partopsep=0pt }
 
 % Algorithms
-\RequirePackage[linesnumbered, ruled, vlined]{algorithm2e} % Algorithms
+% \RequirePackage[linesnumbered, ruled, vlined]{algorithm2e} % Algorithms
 
 % Special gliphs
 \RequirePackage{ccicons} % Creative Commons icons
 
 % Index, glossary and nomenclature
-\RequirePackage{imakeidx}
-\RequirePackage[xindy,toc,numberedsection=nameref]{glossaries}
+% \RequirePackage{imakeidx}
+% \RequirePackage[xindy,toc,numberedsection=nameref,index,acronym]{glossaries}
 \RequirePackage[intoc]{nomencl}
 
 % Commands to print specific words always in the same way
