use the listing environment

--- a/kao.sty
+++ b/kao.sty
@@ -609,7 +609,7 @@
 	\marginskip{\kaomarginskipabove}%
 	\begin{lrbox}{\@sidenotes@marginlistingbox}%
 	\begin{minipage}{\marginparwidth}%
-		\captionsetup{type=lstlisting}%
+		\captionsetup{type=listing}%
 }{%
 	\end{minipage}%
 	\end{lrbox}%
