fix wide listings in twopage mode

--- a/kao.sty
+++ b/kao.sty
@@ -761,8 +761,8 @@
 		floatwidth=\textwidth,%Width of the figure equal to the width of the text
 	}%
 	\floatsetup[widelisting]{% Captions for wide listings
-		margins=hangright,% Put captions above the listing
-		facing=no,%
+		margins=hangoutside,% Put captions above the listing
+		facing=yes,%
 		capposition=above%
 	}%
 	\captionsetup*[lstlisting]{%
